--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- About -->
     <section id="about" class="bg-light">
         <div class="container">
-            <h2 class="m-heading text-center py-1">hello, We are the <span class="text-primary">GYM</span></h2>
+            <h2 class="m-heading text-center py-1">Hello, We are the <span class="text-primary">GYM</span></h2>
                 <div class="about-content">
                     <div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, temporibus, voluptatibus debitis fugit incidunt accusamus repudiandae exercitationem amet officiis repellendus fugiat ex excepturi accusantium. Aspernatur, nesciunt? Quo reiciendis neque expedita eveniet perferendis iste consectetur quod suscipit, maxime, iure dolores labore?</p>
@@ -57,6 +57,40 @@
             <a href="#contact" class="btn">Become A Member</a>
         </div>
     </section>
+    <!-- programs -->
+<section id="programs">
+        <h2 class="m-heading text-center py-1">our <span class="text-primary">Programs</span> </h2>
+    <div class="container">
+        <div class="boxes">
+            <div class="box">
+                <img src="./img/Fitness-icon.png" alt="basic fitness">
+                <div>
+                    <h3>Basic fitness</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, reprehenderit.</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./img/BodyBuilding-icon.png" alt="Body Building">
+                <div>
+                    <h3>Body Building</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, reprehenderit.</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./img/yoga-icon.png" alt="Yoga Training">
+                <div>
+                    <h3>Yoga Training</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, reprehenderit.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
     <!-- jquerry -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
 </body>
