--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <br><br>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident fugiat tempora veniam similique, quo libero tempore voluptate quos culpa illum, ducimus ad exercitationem assumenda ipsa.</p>
                     </div>
-                    <img src="./img/about-us.jpg" alt="About Us">
+                    <img class="box-shadow" src="./img/about-us.jpg" alt="About Us">
                 </div>
           </div>
     </section>
@@ -58,7 +58,7 @@
         </div>
     </section>
     <!-- programs -->
-<section id="programs">
+<section id="programs" class="text-center">
         <h2 class="m-heading text-center py-1">our <span class="text-primary">Programs</span> </h2>
     <div class="container">
         <div class="boxes">
@@ -86,7 +86,56 @@
         </div>
     </div>
 </section>
+<!-- section: trainers  -->
+<section id="trainers" class="bg-light">
+    <h2 class="m-heading text-center py-1">Expert <span class="text-primary">Trainers</span></h2>
+    <div class="container">
+        <div class="trainers-boxes">
+            <div class="trainer-box box-shadow p-1">
+                <img src="./img/trainer-1.jpg " alt="trainer 1">
+                <span class="text-primary">Strength Trainer</span>
+                <h4>Ivan Samkov</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, nemo.</p>
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
 
+                </ul>
+            </div>
+
+            <div class="trainer-box box-shadow p-1">
+                <img src="./img/trainer-2.jpg " alt="trainer 2">
+                <span class="text-primary">Yoga Trainer</span>
+                <h4>Elena Nada</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, nemo.</p>
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+
+                </ul>
+            </div>
+
+            <div class="trainer-box box-shadow p-1">
+                <img src="./img/trainer-3.jpg " alt="trainer 3">
+                <span class="text-primary">Bodybuilding Trainer</span>
+                <h4>John Doe</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, nemo.</p>
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- contact -->
 
 
 
