--- a/index.html
+++ b/index.html
@@ -136,7 +136,27 @@
     </div>
 </section>
 <!-- contact -->
-
+<section id="contact">
+    <div class="contact-us p-1 bg-primary">
+        <h2 class="m-heading py-1">Feel Free to ask anything</h2>
+        <form>
+            <div class="form-group">
+                <input type="text" name="name" placeholder="Name">
+                <input type="email" name="email" placeholder="Email">
+            </div>
+            <div>
+                <input type="text" name="subject" placeholder="subject">
+                <textarea name="message" cols="30" rows="10" placeholder="Message"></textarea>
+            </div>
+            <input value="Submit" type="submit" class="btn"> 
+        </form>
+    </div>
+    <div class="map"></div>
+</section>
+<!-- jquerry -->
+<footer class="bg-dark py-1 text-center">
+    Copyright &COPY; 2020, The GYM, All Rights Reserved
+</footer>
 
 
 
