--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     padding: 0px;
     box-sizing: border-box;
 }
-/* color uses :Hex code: #f3ca20 and #000000
+/* color uses :Hex code: #f3ca20  
 
 /* main style */
 html,body{
