--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="./img/yoga-icon.png" alt="Yoga Training">
+                <img src="./img/Yoga-icon.png" alt="Yoga Training"> 
                 <div>
                     <h3>Yoga Training</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, reprehenderit.</p>
